fix audio player on mobile

--- a/server/geo_sound/static/style.css
+++ b/server/geo_sound/static/style.css
@@ -254,4 +254,5 @@ form.upload button:active {
 audio {
   width: 100%;
   margin-top: 0.5rem;
+  height: 64px;
 }
